ZGenerational support was removed in 24.0